--- a/classes.html
+++ b/classes.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - إدارة الحصص والحضور</title>
+<title>نظام OMA - إدارة الحصص</title>
 <style>
 body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;}
 header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
@@ -16,34 +16,26 @@ label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
-.filters{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:10px;}
-.filters select{width:auto;}
-.modal{position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,0.45);display:none;align-items:center;justify-content:center;z-index:9999;}
-.modal.open{display:flex;}
-.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto;}
-.attendance-list{margin-top:10px;}
-.attendance-item{display:flex;justify-content:space-between;align-items:center;padding:4px 0;border-bottom:1px solid #eee;}
 @media print{
   body{background:white;}
-  header,.filters,.btn,.modal{display:none !important;}
+  header,.filters,.actions,.modal,.btn{display:none !important;}
   table{page-break-inside:avoid;}
 }
 </style>
 </head>
 <body>
-<header>نظام OMA - إدارة الحصص والحضور</header>
+<header>نظام OMA - إدارة الحصص</header>
 <div class="wrap">
 
-<!-- نموذج إضافة/تعديل حصة -->
 <div class="card">
-  <strong>أضف / عدل حصة</strong>
+  <strong>أضف حصة جديدة</strong>
   <form id="classForm">
     <label>المادة</label>
     <select id="subjectSelect" required></select>
     <label>الأستاذ</label>
     <select id="teacherSelect" required></select>
     <label>المجموعة / الكروب</label>
-    <input id="groupInput" type="text" placeholder="مثال: A أو 101" required>
+    <select id="groupSelect" required></select>
     <label>اليوم</label>
     <select id="daySelect" required>
       <option value="الاثنين">الاثنين</option>
@@ -54,20 +46,21 @@ th{background:#004aad;color:#fff;}
     </select>
     <label>الوقت</label>
     <input id="timeInput" type="time" required>
-    <input type="hidden" id="editClassId">
     <button type="submit" class="btn">✅ حفظ الحصة</button>
-    <button type="button" id="cancelEditBtn" class="btn warn">إلغاء التعديل</button>
   </form>
 </div>
 
-<!-- فلاتر الطباعة -->
-<div class="filters">
-  <select id="filterTeacher"><option value="">فلتر حسب الأستاذ</option></select>
-  <select id="filterSubject"><option value="">فلتر حسب المادة</option></select>
-  <input type="text" id="filterGroup" placeholder="فلتر حسب الكروب">
+<div class="card filters">
+  <strong>فلترة الحصص</strong>
+  <label>المادة</label>
+  <select id="filterSubject"><option value="">الكل</option></select>
+  <label>الأستاذ</label>
+  <select id="filterTeacher"><option value="">الكل</option></select>
+  <label>المجموعة</label>
+  <select id="filterGroup"><option value="">الكل</option></select>
+  <button id="filterBtn" class="btn" style="margin-top:8px">تطبيق الفلتر</button>
 </div>
 
-<!-- جدول الحصص -->
 <div class="card">
   <strong>قائمة الحصص</strong>
   <table id="classesTable">
@@ -85,215 +78,159 @@ th{background:#004aad;color:#fff;}
   </table>
 </div>
 
-<!-- نافذة الحضور -->
-<div id="attendanceModal" class="modal">
-  <div class="box">
-    <h3>تسجيل الحضور</h3>
-    <div id="attendanceList" class="attendance-list"></div>
-    <button id="saveAttendanceBtn" class="btn">✅ حفظ الحضور</button>
-    <button id="closeAttendanceBtn" class="btn warn">إغلاق</button>
-  </div>
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc, updateDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, doc, deleteDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
 const firebaseConfig = {
-  apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
-  authDomain: "oma2-d36fa.firebaseapp.com",
-  projectId: "oma2-d36fa",
-  storageBucket: "oma2-d36fa.appspot.com",
-  messagingSenderId: "774171603105",
-  appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
+  apiKey: "API_KEY",
+  authDomain: "PROJECT_ID.firebaseapp.com",
+  projectId: "PROJECT_ID",
+  storageBucket: "PROJECT_ID.appspot.com",
+  messagingSenderId: "SENDER_ID",
+  appId: "APP_ID"
 };
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
 // التحقق من تسجيل الدخول
-onAuthStateChanged(auth, user => {
+onAuthStateChanged(auth, user=>{
   if(!user){ window.location.href="login.html"; }
-  else{ document.body.style.visibility="visible"; loadSubjectsAndTeachers(); loadClasses(); }
+  else{ document.body.style.visibility="visible"; loadSubjectsTeachersGroups(); loadClasses(); }
 });
 
-const classForm = document.getElementById("classForm");
-const subjectSelect = document.getElementById("subjectSelect");
-const teacherSelect = document.getElementById("teacherSelect");
-const classesTableBody = document.querySelector("#classesTable tbody");
-const filterTeacher = document.getElementById("filterTeacher");
-const filterSubject = document.getElementById("filterSubject");
-const filterGroup = document.getElementById("filterGroup");
-const editClassId = document.getElementById("editClassId");
-const cancelEditBtn = document.getElementById("cancelEditBtn");
+// عناصر النموذج
+const classForm=document.getElementById("classForm");
+const subjectSelect=document.getElementById("subjectSelect");
+const teacherSelect=document.getElementById("teacherSelect");
+const groupSelect=document.getElementById("groupSelect");
+const classesTableBody=document.querySelector("#classesTable tbody");
 
-// Modal الحضور
-const attendanceModal = document.getElementById("attendanceModal");
-const attendanceList = document.getElementById("attendanceList");
-const saveAttendanceBtn = document.getElementById("saveAttendanceBtn");
-const closeAttendanceBtn = document.getElementById("closeAttendanceBtn");
-let currentClassDocId = null;
+const filterSubject=document.getElementById("filterSubject");
+const filterTeacher=document.getElementById("filterTeacher");
+const filterGroup=document.getElementById("filterGroup");
+const filterBtn=document.getElementById("filterBtn");
 
-// تحميل المواد والأساتذة
-async function loadSubjectsAndTeachers(){
-  const studentsSnap = await getDocs(collection(db,"students"));
-  const subjectsSet = new Set();
-  studentsSnap.forEach(snap => snap.data().subjects.forEach(sub => subjectsSet.add(sub.name)));
-  subjectSelect.innerHTML="<option value=''>اختر المادة</option>";
-  filterSubject.innerHTML="<option value=''>فلتر حسب المادة</option>";
-  subjectsSet.forEach(s => {
-    subjectSelect.innerHTML+=`<option value="${s}">${s}</option>`;
-    filterSubject.innerHTML+=`<option value="${s}">${s}</option>`;
+let subjectsList=[], teachersList=[], groupsList=[], classesData=[];
+
+// تحميل المواد والأساتذة والكروبات
+async function loadSubjectsTeachersGroups(){
+  subjectsList=[]; teachersList=[]; groupsList=[];
+  
+  const studentsSnap=await getDocs(collection(db,"students"));
+  const subjectsSet=new Set();
+  const groupsSet=new Set();
+  studentsSnap.forEach(s=>{
+    s.data().subjects.forEach(sub=>subjectsSet.add(sub.name));
+    if(s.data().group) groupsSet.add(s.data().group);
   });
-
-  const teachersSnap = await getDocs(collection(db,"teachers"));
+  subjectsList=[...subjectsSet]; groupsList=[...groupsSet];
+  
+  const teachersSnap=await getDocs(collection(db,"teachers"));
+  teachersSnap.forEach(t=>{teachersList.push({id:t.id,...t.data()});});
+  
+  // تعبئة القوائم
+  subjectSelect.innerHTML="<option value=''>اختر المادة</option>";
+  filterSubject.innerHTML="<option value=''>الكل</option>";
+  subjectsList.forEach(sub=>{
+    subjectSelect.innerHTML+=`<option value="${sub}">${sub}</option>`;
+    filterSubject.innerHTML+=`<option value="${sub}">${sub}</option>`;
+  });
+  
   teacherSelect.innerHTML="<option value=''>اختر الأستاذ</option>";
-  filterTeacher.innerHTML="<option value=''>فلتر حسب الأستاذ</option>";
-  teachersSnap.forEach(snap => {
-    const t = snap.data();
-    teacherSelect.innerHTML+=`<option value="${t.name}">${t.name}</option>`;
-    filterTeacher.innerHTML+=`<option value="${t.name}">${t.name}</option>`;
+  filterTeacher.innerHTML="<option value=''>الكل</option>";
+  teachersList.forEach(t=>{
+    teacherSelect.innerHTML+=`<option value="${t.id}">${t.name}</option>`;
+    filterTeacher.innerHTML+=`<option value="${t.id}">${t.name}</option>`;
+  });
+  
+  groupSelect.innerHTML="<option value=''>اختر الكروب</option>";
+  filterGroup.innerHTML="<option value=''>الكل</option>";
+  groupsList.forEach(g=>{
+    groupSelect.innerHTML+=`<option value="${g}">${g}</option>`;
+    filterGroup.innerHTML+=`<option value="${g}">${g}</option>`;
   });
 }
 
-// حفظ / تعديل الحصة
-classForm.addEventListener("submit", async e=>{
+// حفظ الحصة
+classForm.addEventListener("submit",async e=>{
   e.preventDefault();
-  const subject = subjectSelect.value;
-  const teacher = teacherSelect.value;
-  const group = document.getElementById("groupInput").value.trim();
-  const day = document.getElementById("daySelect").value;
-  const time = document.getElementById("timeInput").value;
-
-  const studentsSnap = await getDocs(collection(db,"students"));
-  const groupStudents = [];
-  studentsSnap.forEach(snap=>{
-    const s = snap.data();
-    if(s.group===group){ groupStudents.push({id:snap.id,name:s.name}); }
+  const subject=subjectSelect.value;
+  const teacherId=teacherSelect.value;
+  const group=groupSelect.value;
+  const day=document.getElementById("daySelect").value;
+  const time=document.getElementById("timeInput").value;
+  
+  // الطلاب المرتبطين بالكروب
+  const studentsSnap=await getDocs(collection(db,"students"));
+  const groupStudents=[];
+  studentsSnap.forEach(s=>{
+    const st=s.data();
+    if(st.group===group) groupStudents.push({id:s.id,name:st.name});
   });
-
-  if(editClassId.value){
-    const docRef = doc(db,"classes",editClassId.value);
-    await updateDoc(docRef,{subject,teacher,group,day,time,students:groupStudents});
-    alert("تم تعديل الحصة بنجاح");
-    editClassId.value="";
-  } else {
-    await addDoc(collection(db,"classes"),{subject,teacher,group,day,time,students:groupStudents,attendance:[]});
-    alert("تم حفظ الحصة بنجاح");
-  }
+  
+  await addDoc(collection(db,"classes"),{
+    subject,
+    teacherId,
+    group,
+    day,
+    time,
+    students:groupStudents,
+    attendance:[]
+  });
+  
+  alert("تم حفظ الحصة بنجاح");
   classForm.reset();
   loadClasses();
 });
 
-// إلغاء التعديل
-cancelEditBtn.addEventListener("click", ()=>{
-  classForm.reset();
-  editClassId.value="";
-});
-
 // تحميل الحصص
-async function loadClasses(){
-  const snapshot = await getDocs(collection(db,"classes"));
+async function loadClasses(filter={}){
+  const snapshot=await getDocs(collection(db,"classes"));
   classesTableBody.innerHTML="";
+  classesData=[];
   snapshot.forEach(docSnap=>{
-    const cls = {...docSnap.data(),id:docSnap.id};
-    if(filterTeacher.value && cls.teacher!==filterTeacher.value) return;
-    if(filterSubject.value && cls.subject!==filterSubject.value) return;
-    if(filterGroup.value && !cls.group.includes(filterGroup.value)) return;
-
-    const tr = document.createElement("tr");
-    tr.innerHTML=`
-      <td>${cls.subject}</td>
-      <td>${cls.teacher}</td>
-      <td>${cls.group}</td>
-      <td>${cls.day}</td>
-      <td>${cls.time}</td>
-      <td>
-        <button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button>
-        <button class="btn" onclick="editClass('${cls.id}')">✏️ تعديل</button>
-        <button class="btn" onclick="openAttendance('${cls.id}')">📝 الحضور</button>
-      </td>
-    `;
-    classesTableBody.appendChild(tr);
+    const cls={id:docSnap.id,...docSnap.data()};
+    // فلترة
+    if((!filter.subject || cls.subject===filter.subject) &&
+       (!filter.teacher || cls.teacherId===filter.teacher) &&
+       (!filter.group || cls.group===filter.group)){
+      classesData.push(cls);
+      const teacherName=(teachersList.find(t=>t.id===cls.teacherId)||{}).name||"غير معروف";
+      const tr=document.createElement("tr");
+      tr.innerHTML=`
+        <td>${cls.subject}</td>
+        <td>${teacherName}</td>
+        <td>${cls.group}</td>
+        <td>${cls.day}</td>
+        <td>${cls.time}</td>
+        <td><button class="btn warn" onclick="deleteClass('${cls.id}')">🗑️ حذف</button></td>
+      `;
+      classesTableBody.appendChild(tr);
+    }
   });
 }
 
-// حذف حصة
-window.deleteClass = async id=>{
+// حذف الحصة
+window.deleteClass=async id=>{
   if(confirm("هل تريد حذف الحصة؟")){
     await deleteDoc(doc(db,"classes",id));
     loadClasses();
   }
 }
 
-// تعديل حصة
-window.editClass = async id=>{
-  const docSnap = await getDocs(collection(db,"classes"));
-  const clsDoc = docSnap.docs.find(d=>d.id===id);
-  if(clsDoc){
-    const cls = clsDoc.data();
-    subjectSelect.value = cls.subject;
-    teacherSelect.value = cls.teacher;
-    document.getElementById("groupInput").value = cls.group;
-    document.getElementById("daySelect").value = cls.day;
-    document.getElementById("timeInput").value = cls.time;
-    editClassId.value = id;
-  }
-}
-
-// فتح نافذة الحضور
-window.openAttendance = async id=>{
-  currentClassDocId = id;
-  attendanceList.innerHTML = "";
-  const docSnap = await getDocs(collection(db,"classes"));
-  const clsDoc = docSnap.docs.find(d=>d.id===id);
-  if(clsDoc){
-    const cls = clsDoc.data();
-    cls.students.forEach(s=>{
-      const presentRecord = cls.attendance.find(a=>a.studentId===s.id);
-      attendanceList.innerHTML += `
-        <div class="attendance-item">
-          <span>${s.name}</span>
-          <select data-studentid="${s.id}">
-            <option value="true" ${presentRecord?.present?"selected":""}>حاضر</option>
-            <option value="false" ${presentRecord?.present===false?"selected":""}>غائب</option>
-          </select>
-        </div>
-      `;
-    });
-  }
-  attendanceModal.classList.add("open");
-}
-
-// حفظ الحضور
-saveAttendanceBtn.addEventListener("click", async ()=>{
-  if(!currentClassDocId) return;
-  const attendanceData = [];
-  attendanceList.querySelectorAll("select").forEach(sel=>{
-    attendanceData.push({
-      studentId: sel.dataset.studentid,
-      studentName: sel.parentElement.querySelector("span").innerText,
-      present: sel.value==="true",
-      timestamp: new Date()
-    });
+// تطبيق الفلتر
+filterBtn.addEventListener("click",()=>{
+  loadClasses({
+    subject:filterSubject.value,
+    teacher:filterTeacher.value,
+    group:filterGroup.value
   });
-  const docRef = doc(db,"classes",currentClassDocId);
-  await updateDoc(docRef,{attendance:attendanceData});
-  alert("تم حفظ الحضور");
-  attendanceModal.classList.remove("open");
-  loadClasses();
 });
-
-// إغلاق نافذة الحضور
-closeAttendanceBtn.addEventListener("click", ()=>{
-  attendanceModal.classList.remove("open");
-});
-
-// تطبيق الفلاتر
-filterTeacher.addEventListener("change", loadClasses);
-filterSubject.addEventListener("change", loadClasses);
-filterGroup.addEventListener("input", loadClasses);
 </script>
 </body>
 </html>
