--- a/settings.html
+++ b/settings.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>نظام OMA - الإعدادات والدخول</title>
+<title>نظام OMA - الإعدادات المركزية</title>
 <style>
 body{font-family:'Cairo',sans-serif;direction:rtl;margin:0;background:#f5f9ff;color:#102027;}
 header{background:#004aad;color:#fff;padding:18px;text-align:center;font-size:20px;font-weight:700;}
@@ -16,10 +16,16 @@ label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
 table{width:100%;border-collapse:collapse;margin-top:12px;}
 th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
 th{background:#004aad;color:#fff;}
+@media print{
+  body{background:white;}
+  header,.btn,.modal{display:none !important;}
+}
+.filters{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:12px;}
+.filters select{flex:1;}
 </style>
 </head>
 <body>
-<header>نظام OMA - الإعدادات والدخول</header>
+<header>نظام OMA - الإعدادات المركزية</header>
 <div class="wrap">
 
 <!-- إعدادات النسب -->
@@ -36,7 +42,7 @@ th{background:#004aad;color:#fff;}
 
 <!-- إدارة الحسابات -->
 <div class="card">
-  <strong>إدارة دخول الطلاب والأساتذة</strong>
+  <strong>إدارة دخول المستخدمين</strong>
   <form id="userForm">
     <label>نوع الحساب</label>
     <select id="userType">
@@ -46,23 +52,72 @@ th{background:#004aad;color:#fff;}
     </select>
     <label>الاسم الكامل</label>
     <input id="userName" type="text" required>
-    <label>البريد الإلكتروني / اسم المستخدم</label>
-    <input id="userEmail" type="text" required>
+    <label>البريد الإلكتروني</label>
+    <input id="userEmail" type="email" required>
     <label>كلمة المرور</label>
     <input id="userPassword" type="password" required>
     <button type="submit" class="btn">✅ إضافة المستخدم</button>
   </form>
 </div>
 
-<!-- جدول المستخدمين -->
+<!-- فلاتر وعرض الطلاب -->
 <div class="card">
-  <strong>قائمة المستخدمين</strong>
-  <table id="usersTable">
+  <strong>قائمة الطلاب</strong>
+  <div class="filters">
+    <select id="studentFilterGroup"><option value="">فلترة حسب الكروب</option></select>
+    <select id="studentFilterStage"><option value="">فلترة حسب المرحلة</option></select>
+  </div>
+  <table id="studentsTable">
     <thead>
       <tr>
         <th>الاسم</th>
-        <th>البريد / اسم المستخدم</th>
-        <th>نوع الحساب</th>
+        <th>الهاتف</th>
+        <th>المرحلة</th>
+        <th>المجموعة</th>
+        <th>الأقساط</th>
+        <th>خيارات</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
+
+<!-- فلاتر وعرض الأساتذة -->
+<div class="card">
+  <strong>قائمة الأساتذة</strong>
+  <div class="filters">
+    <select id="teacherFilter"><option value="">فلترة حسب الأستاذ</option></select>
+  </div>
+  <table id="teachersTable">
+    <thead>
+      <tr>
+        <th>الاسم</th>
+        <th>الهاتف</th>
+        <th>المواد</th>
+        <th>المراحل</th>
+        <th>الكروبات</th>
+        <th>خيارات</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
+
+<!-- فلاتر وعرض الحصص -->
+<div class="card">
+  <strong>قائمة الحصص</strong>
+  <div class="filters">
+    <select id="classFilterTeacher"><option value="">فلترة حسب الأستاذ</option></select>
+    <select id="classFilterGroup"><option value="">فلترة حسب الكروب</option></select>
+  </div>
+  <table id="classesTable">
+    <thead>
+      <tr>
+        <th>المادة</th>
+        <th>الأستاذ</th>
+        <th>الكروب</th>
+        <th>اليوم</th>
+        <th>الوقت</th>
         <th>خيارات</th>
       </tr>
     </thead>
@@ -71,8 +126,9 @@ th{background:#004aad;color:#fff;}
 </div>
 
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+import { getFirestore, collection, getDocs, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
 const firebaseConfig = {
   apiKey: "API_KEY_HERE",
@@ -85,60 +141,119 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
+const auth = getAuth(app);
 
-// حفظ الإعدادات
-const settingsForm = document.getElementById("settingsForm");
-settingsForm.addEventListener("submit", async(e)=>{
-  e.preventDefault();
-  const instituteShare = parseFloat(document.getElementById("instituteShare").value)||0;
-  const teacherShare = parseFloat(document.getElementById("teacherShare").value)||0;
-  const settingsRef = collection(db,"settings");
-  await addDoc(settingsRef,{instituteShare,teacherShare,updatedAt:new Date()});
-  alert("تم حفظ الإعدادات بنجاح");
+// تأمين الصفحة
+auth.onAuthStateChanged(user=>{
+  if(!user) window.location.href="login.html";
 });
 
-// إضافة مستخدم
-const userForm = document.getElementById("userForm");
-const usersTableBody = document.querySelector("#usersTable tbody");
+// عناصر الطلاب
+const studentsTableBody = document.querySelector("#studentsTable tbody");
+const studentFilterGroup = document.getElementById("studentFilterGroup");
+const studentFilterStage = document.getElementById("studentFilterStage");
 
-userForm.addEventListener("submit", async(e)=>{
-  e.preventDefault();
-  const type = document.getElementById("userType").value;
-  const name = document.getElementById("userName").value.trim();
-  const email = document.getElementById("userEmail").value.trim();
-  const password = document.getElementById("userPassword").value.trim();
+// عناصر الأساتذة
+const teachersTableBody = document.querySelector("#teachersTable tbody");
+const teacherFilter = document.getElementById("teacherFilter");
 
-  await addDoc(collection(db,"users"),{type,name,email,password,createdAt:new Date()});
-  alert("تم إضافة المستخدم بنجاح");
-  userForm.reset();
-  loadUsers();
-});
+// عناصر الحصص
+const classesTableBody = document.querySelector("#classesTable tbody");
+const classFilterTeacher = document.getElementById("classFilterTeacher");
+const classFilterGroup = document.getElementById("classFilterGroup");
 
-// تحميل المستخدمين
-async function loadUsers(){
-  const snapshot = await getDocs(collection(db,"users"));
-  usersTableBody.innerHTML="";
+// تحميل الطلاب
+async function loadStudents(){
+  const snapshot = await getDocs(collection(db,"students"));
+  studentsTableBody.innerHTML="";
+  let groupsSet = new Set(), stagesSet = new Set();
   snapshot.forEach(docSnap=>{
-    const user = {...docSnap.data(),id:docSnap.id};
+    const s = {...docSnap.data(),id:docSnap.id};
+    // حفظ الفلاتر
+    groupsSet.add(s.group); stagesSet.add(s.stage);
     const tr = document.createElement("tr");
     tr.innerHTML=`
-      <td>${user.name}</td>
-      <td>${user.email}</td>
-      <td>${user.type}</td>
-      <td>
-        <button class="btn warn" onclick="deleteUser('${user.id}')">🗑️ حذف</button>
-      </td>
+      <td>${s.name}</td>
+      <td>${s.phone}</td>
+      <td>${s.stage}</td>
+      <td>${s.group}</td>
+      <td>${s.subjects.map(sub=>"["+sub.name+"-"+sub.fee+"]").join(", ")}</td>
+      <td><button class="btn warn" onclick="deleteStudent('${s.id}')">🗑️ حذف</button></td>
     `;
-    usersTableBody.appendChild(tr);
+    studentsTableBody.appendChild(tr);
+  });
+  // إعداد خيارات الفلاتر
+  studentFilterGroup.innerHTML="<option value=''>فلترة حسب الكروب</option>"; groupsSet.forEach(g=>{studentFilterGroup.innerHTML+=`<option value='${g}'>${g}</option>`});
+  studentFilterStage.innerHTML="<option value=''>فلترة حسب المرحلة</option>"; stagesSet.forEach(st=>{studentFilterStage.innerHTML+=`<option value='${st}'>${st}</option>`});
+}
+loadStudents();
+
+// حذف طالب
+window.deleteStudent = async(id)=>{
+  if(confirm("هل تريد حذف الطالب؟")){
+    await deleteDoc(doc(db,"students",id));
+    loadStudents();
+  }
+}
+
+// تحميل الأساتذة
+async function loadTeachers(){
+  const snapshot = await getDocs(collection(db,"teachers"));
+  teachersTableBody.innerHTML=""; teacherFilter.innerHTML="<option value=''>فلترة حسب الأستاذ</option>";
+  snapshot.forEach(docSnap=>{
+    const t = {...docSnap.data(),id:docSnap.id};
+    const tr = document.createElement("tr");
+    tr.innerHTML=`
+      <td>${t.name}</td>
+      <td>${t.phone}</td>
+      <td>${t.subjects.map(s=>s.name).join(", ")}</td>
+      <td>${t.stages}</td>
+      <td>${t.groups}</td>
+      <td><button class="btn warn" onclick="deleteTeacher('${t.id}')">🗑️ حذف</button></td>
+    `;
+    teachersTableBody.appendChild(tr);
+    teacherFilter.innerHTML+=`<option value='${t.name}'>${t.name}</option>`;
   });
 }
-loadUsers();
+loadTeachers();
 
-// حذف مستخدم
-window.deleteUser = async(id)=>{
-  if(confirm("هل تريد حذف المستخدم؟")){
-    await deleteDoc(doc(db,"users",id));
-    loadUsers();
+// حذف أستاذ
+window.deleteTeacher = async(id)=>{
+  if(confirm("هل تريد حذف الأستاذ؟")){
+    await deleteDoc(doc(db,"teachers",id));
+    loadTeachers();
+  }
+}
+
+// تحميل الحصص
+async function loadClasses(){
+  const snapshot = await getDocs(collection(db,"classes"));
+  classesTableBody.innerHTML="";
+  classFilterTeacher.innerHTML="<option value=''>فلترة حسب الأستاذ</option>";
+  classFilterGroup.innerHTML="<option value=''>فلترة حسب الكروب</option>";
+  snapshot.forEach(docSnap=>{
+    const c = {...docSnap.data(),id:docSnap.id};
+    const tr = document.createElement("tr");
+    tr.innerHTML=`
+      <td>${c.subject}</td>
+      <td>${c.teacherName}</td>
+      <td>${c.group}</td>
+      <td>${c.day}</td>
+      <td>${c.time}</td>
+      <td><button class="btn warn" onclick="deleteClass('${c.id}')">🗑️ حذف</button></td>
+    `;
+    classesTableBody.appendChild(tr);
+    classFilterTeacher.innerHTML+=`<option value='${c.teacherName}'>${c.teacherName}</option>`;
+    classFilterGroup.innerHTML+=`<option value='${c.group}'>${c.group}</option>`;
+  });
+}
+loadClasses();
+
+// حذف حصة
+window.deleteClass = async(id)=>{
+  if(confirm("هل تريد حذف الحصة؟")){
+    await deleteDoc(doc(db,"classes",id));
+    loadClasses();
   }
 }
 </script>
